Add examples to start talk

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -9,7 +9,25 @@ target_sources(
 
 target_link_libraries(main monoid)
 
+add_executable(map_example "")
+
+target_sources(
+  map_example
+  PRIVATE
+  map_example.cpp)
+
+target_link_libraries(map_example)
+
+add_executable(cpo_example "")
+
+target_sources(
+  cpo_example
+  PRIVATE
+  cpo_example.cpp)
+
+target_link_libraries(cpo_example)
+
 install(
-  TARGETS main
+  TARGETS main map_example cpo_example
   DESTINATION ${CMAKE_INSTALL_BINDIR}
   )
