Update to infra from beman.optional
Update and fix all the things found with better lint and build tools.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,26 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.27)
 
 project(ConceptMap VERSION 0.0.0 LANGUAGES CXX)
 
-enable_testing()
+# Includes
+include(CTest)
+include(FetchContent)
 
 set(TARGETS_EXPORT_NAME ${CMAKE_PROJECT_NAME}Targets)
 
-add_subdirectory(extern)
+option(
+    OPTIONAL_ENABLE_TESTING
+    "Enable building tests and test infrastructure"
+    ${PROJECT_IS_TOP_LEVEL}
+)
+
+set(CMAKE_VERIFY_INTERFACE_HEADER_SETS ON)
+
+if(OPTIONAL_ENABLE_TESTING)
+    find_package(GTest QUIET)
+endif()
+
+# add_subdirectory(extern)
 add_subdirectory(src)
 
 include(GNUInstallDirs)
@@ -14,10 +28,10 @@ include(GNUInstallDirs)
 set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake)
 
 install(
-  EXPORT ${TARGETS_EXPORT_NAME}
-  NAMESPACE ${CMAKE_PROJECT_NAME}
-  DESTINATION ${INSTALL_CONFIGDIR}
-  )
+    EXPORT ${TARGETS_EXPORT_NAME}
+    NAMESPACE ${CMAKE_PROJECT_NAME}
+    DESTINATION ${INSTALL_CONFIGDIR}
+)
 
 include(CMakePackageConfigHelpers)
 
@@ -33,8 +47,20 @@ configure_package_config_file(
     INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
 )
 
-install(FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}ConfigVersion.cmake
+install(
+    FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
+        ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}ConfigVersion.cmake
     DESTINATION ${INSTALL_CONFIGDIR}
+)
+
+# Coverage
+configure_file("cmake/gcovr.cfg.in" gcovr.cfg @ONLY)
+
+add_custom_target(
+    process_coverage
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMENT "Running gcovr to process coverage results"
+    COMMAND mkdir -p coverage
+    COMMAND gcovr --config gcovr.cfg .
 )
