Restructure to use header filesets
Use header filesets to allow compiling the filesets separately to check that
they are self contained.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,39 +20,46 @@ if(OPTIONAL_ENABLE_TESTING)
     find_package(GTest QUIET)
 endif()
 
+# Create the library target and named header set for beman_optional
+add_library(concept_map INTERFACE)
+target_sources(
+  concept_map
+  PUBLIC FILE_SET concept_map_headers TYPE HEADERS BASE_DIRS src
+)
+
 # add_subdirectory(extern)
 add_subdirectory(src)
 
 include(GNUInstallDirs)
 
-set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake)
+# set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake)
 
-install(
-    EXPORT ${TARGETS_EXPORT_NAME}
-    NAMESPACE ${CMAKE_PROJECT_NAME}
-    DESTINATION ${INSTALL_CONFIGDIR}
-)
+# install(
+#     EXPORT ${TARGETS_EXPORT_NAME}
+#     NAMESPACE ${CMAKE_PROJECT_NAME}
+#     DESTINATION ${INSTALL_CONFIGDIR}
+# )
 
-include(CMakePackageConfigHelpers)
+# include(CMakePackageConfigHelpers)
 
-write_basic_package_version_file(
-    ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}ConfigVersion.cmake
-    VERSION ${PROJECT_VERSION}
-    COMPATIBILITY AnyNewerVersion
-)
+# write_basic_package_version_file(
+#     ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}ConfigVersion.cmake
+#     VERSION ${PROJECT_VERSION}
+#     COMPATIBILITY AnyNewerVersion
+# )
 
-configure_package_config_file(
-    "cmake/Config.cmake.in"
-    ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-    INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
-)
+# configure_package_config_file(
+#     "cmake/Config.cmake.in"
+#     ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
+#     INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
+# )
 
-install(
-    FILES
-        ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-        ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}ConfigVersion.cmake
-    DESTINATION ${INSTALL_CONFIGDIR}
-)
+# install(
+#     FILES
+#         ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
+#         ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}ConfigVersion.cmake
+#     DESTINATION ${INSTALL_CONFIGDIR}
+# )
 
 # Coverage
 configure_file("cmake/gcovr.cfg.in" gcovr.cfg @ONLY)
