--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,7 @@ jobs:
           # Note: clang-19 + Asan setup causes errors on some platforms. Temporary skip some checks via .asan_options.
           - {name: "Ubuntu Clang 19", tag: "clang:19", toolchain: "clang-19", cmake_args: "-G \"Ninja Multi-Config\" -DCMAKE_CONFIGURATION_TYPES=\"RelWithDebInfo;Asan\" ", asan_options: "new_delete_type_mismatch=0"}
           - {name: "Ubuntu Clang 18", tag: "clang:18", toolchain: "clang-18", cmake_args: "-G \"Ninja Multi-Config\" -DCMAKE_CONFIGURATION_TYPES=\"RelWithDebInfo;Asan\" "}
-          - {name: "Ubuntu Clang 17", tag: "clang:17", toolchain: "clang-17", cmake_args: "-G \"Ninja Multi-Config\" -DCMAKE_CONFIGURATION_TYPES=\"RelWithDebInfo;Asan\" "}
           - {name: "Ubuntu GCC 14", tag: "gcc:14", toolchain: "gcc-14", cmake_args: "-G \"Ninja Multi-Config\" -DCMAKE_CONFIGURATION_TYPES=\"RelWithDebInfo;Asan;Gcov\" ", coverage: true}
-          - {name: "Ubuntu GCC 13", tag: "gcc:13", toolchain: "gcc-13",  cmake_args: "-G \"Ninja Multi-Config\" -DCMAKE_CONFIGURATION_TYPES=\"RelWithDebInfo;Asan\" "}
-          - {name: "Ubuntu GCC 12", tag: "gcc:12", toolchain: "gcc-12",  cmake_args: "-G \"Ninja Multi-Config\" -DCMAKE_CONFIGURATION_TYPES=\"RelWithDebInfo;Asan\" "}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -38,12 +35,6 @@ jobs:
           set -x
           sudo apt update
           sudo apt -y upgrade
-      - name: Install libc++
-        if: matrix.config.tag == 'clang:17'
-        run: |
-          set -x
-          sudo apt-get install -y libc++-dev libc++1 libc++abi-dev libc++abi1
-          find /usr/lib/x86_64-linux-gnu/ -name libc++.so* || true
       - name: Install Gcovr
         if: matrix.config.coverage
         run: |
@@ -83,7 +74,7 @@ jobs:
       - name: Install
         run: |
           set -x
-          cmake --install .build --config RelWithDebInfo --component beman_optional_development --verbose
+          cmake --install .build --config RelWithDebInfo --component concept_map_development --verbose
       - name: CMake Gcov Build
         if: matrix.config.coverage
         run: |
@@ -100,12 +91,6 @@ jobs:
         run: |
           set -x
           cmake --build .build --config Gcov --target process_coverage -- -k 0
-      - name: Coveralls
-        if: matrix.config.coverage
-        uses: coverallsapp/github-action@main
-        with:
-          file: .build/coverage.json
-          github-token: ${{ secrets.GITHUB_TOKEN }}
 
   create-issue-when-fault:
     runs-on: ubuntu-latest
