--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,19 @@
-cmake_minimum_required(VERSION 3.27)
+cmake_minimum_required(VERSION 4.0..4.2)
 
 project(ConceptMap VERSION 0.0.0 LANGUAGES CXX)
+
+# Enable experimental feature!!
+set(CMAKE_EXPERIMENTAL_INSTRUMENTATION ec7aa2dc-b87f-45a3-8022-fe01c5f59984)
+
+# Instrumentation query
+# find_package(Python COMPONENTS Interpreter)
+cmake_instrumentation(
+  API_VERSION 1
+  DATA_VERSION 1
+  HOOKS postGenerate preBuild postBuild preCMakeBuild postCMakeBuild postCMakeInstall postCTest
+  OPTIONS trace
+  CALLBACK ${CMAKE_SOURCE_DIR}/scripts/instrument.sh
+)
 
 # Includes
 include(CTest)
@@ -17,7 +30,7 @@ option(
 set(CMAKE_VERIFY_INTERFACE_HEADER_SETS ON)
 
 if(OPTIONAL_ENABLE_TESTING)
-    find_package(GTest QUIET)
+    find_package(GTest CONFIG QUIET)
 endif()
 
 # Create the library target and named header set for beman_optional
@@ -31,35 +44,6 @@ target_sources(
 add_subdirectory(src)
 
 include(GNUInstallDirs)
-
-# set(INSTALL_CONFIGDIR ${CMAKE_INSTALL_LIBDIR}/cmake)
-
-# install(
-#     EXPORT ${TARGETS_EXPORT_NAME}
-#     NAMESPACE ${CMAKE_PROJECT_NAME}
-#     DESTINATION ${INSTALL_CONFIGDIR}
-# )
-
-# include(CMakePackageConfigHelpers)
-
-# write_basic_package_version_file(
-#     ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}ConfigVersion.cmake
-#     VERSION ${PROJECT_VERSION}
-#     COMPATIBILITY AnyNewerVersion
-# )
-
-# configure_package_config_file(
-#     "cmake/Config.cmake.in"
-#     ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-#     INSTALL_DESTINATION ${INSTALL_CONFIGDIR}
-# )
-
-# install(
-#     FILES
-#         ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-#         ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_PROJECT_NAME}ConfigVersion.cmake
-#     DESTINATION ${INSTALL_CONFIGDIR}
-# )
 
 # Coverage
 configure_file("cmake/gcovr.cfg.in" gcovr.cfg @ONLY)
