--- a/latex/Makefile
+++ b/latex/Makefile
@@ -55,3 +55,11 @@ $(foreach file,$(TARGET),$(eval -include $(DEPS_DIR)/$(file).d))
 .PHONY: help
 help: ## Show this help.
 	@awk 'BEGIN {FS = ":.*?## "} /^[a-zA-Z_-]+:.*?## / {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'  $(MAKEFILE_LIST) | sort
+
+.PHONY: test
+test: ## Test
+test: all
+
+.PHONY: all
+all: ## All
+all: mwe.pdf
