Convert to `uv`

--- a/cmake/gcovr.cfg.in
+++ b/cmake/gcovr.cfg.in
@@ -7,7 +7,7 @@ gcov-parallel = yes
 html-theme = github.dark-blue
 html-self-contained = yes
 print-summary = yes
-filter = .*/beman/optional/.*
+filter = .*/smd/conceptmap/.*
 exclude = .*\.t\.cpp
 coveralls = coverage.json
 coveralls-pretty = yes
